--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "bulma": "^0.9.2",
-    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.4",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
